<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimaryDark"
        android:paddingTop="50dp"
        android:src="@mipmap/logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/ads"
        android:textColor="@color/text_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_regis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/regis"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:background="@color/colorPrimaryDark">

            <ImageView
                android:id="@+id/iv_login"
                android:layout_width="0dp"
                android:layout_height="15dp"
                android:layout_weight="1"
                android:src="@mipmap/sanjiao" />

            <ImageView
                android:id="@+id/iv_regis"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@mipmap/sanjiao"
                android:visibility="invisible" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_gravity="bottom"
            android:background="@color/white" />
    </FrameLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/layout_login"
                layout="@layout/layout_login" />

            <include
                android:id="@+id/layout_regis"
                layout="@layout/layout_regis"
                android:visibility="invisible" />

        </FrameLayout>
    </ScrollView>


</LinearLayout>